validated some html and created active and non-active state for the continue button

--- a/can_i_publish/libel/static/scss/_base.scss
+++ b/can_i_publish/libel/static/scss/_base.scss
@@ -4,6 +4,7 @@ $blk: #000000;
 $blu: #25b3fb;
 $gry: #7A898D;
 $a_gry: rgba(0, 0, 0, 0.3);
+$b_gry: rgba(0, 0, 0, 0.1);
 
 // fonts
 $main_font: 'Poppins', sans-serif;
