--- a/can_i_publish/libel/templates/libel/summary.html
+++ b/can_i_publish/libel/templates/libel/summary.html
@@ -32,7 +32,7 @@
     {% endif %}
   </div>
 
-  <div class="metrics">
+  <div class="metrics_button">
     <button
       class="choice"
       data-choice="metrics">
