--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -14,7 +14,7 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'normalize.min.css' %}?v=8.0.1">
   <!-- TODO: use min file once the styles are complete -->
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220422h">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220427b">
 
 
 </head>
