finalized header and start over button

--- a/can_i_publish/libel/static/style.css
+++ b/can_i_publish/libel/static/style.css
@@ -19,7 +19,23 @@ h3 {
 }
 
 header {
+  background-color: #25b3fb;
+  box-sizing: border-box;
+  margin: 0 auto 24px auto;
+  padding: 12px;
   text-align: center;
+  width: 400px;
+}
+header h1,
+header h2,
+header h3 {
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 48px;
+}
+header h2,
+header h3 {
+  font-weight: 300;
 }
 
 .card {
@@ -35,9 +51,9 @@ header {
 }
 .card .question_txt {
   color: #25b3fb;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
-  line-height: 26px;
+  line-height: 28px;
 }
 .card .question_txt a {
   border-bottom: 2px dashed #25b3fb;
@@ -72,7 +88,22 @@ button {
   color: #ffffff;
 }
 
-.start_over_button button,
+.start_over_button button {
+  background-color: #ffffff;
+  border: 1px dotted #25b3fb;
+  border-radius: 8px;
+  color: rgba(37, 179, 251, 0.3);
+  display: block;
+  margin: 24px 0;
+  min-height: 40px;
+  transition: 1s;
+  width: 100%;
+}
+.start_over_button button:hover {
+  background-color: #25b3fb;
+  color: #ffffff;
+}
+
 .metrics_button button {
   background-color: #25b3fb;
   border: 0;
