--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -14,16 +14,20 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'normalize.min.css' %}?v=8.0.1">
   <!-- TODO: use min file once the styles are complete -->
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220427b">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220427i">
 
 
 </head>
 <body>
+
   <div class="container">
+
+    {% if card.card_slug == 'Q1' %}
     <header>
       <h1>Can I Publish This?</h1>
-      <h2>Libel</h2>
+      <h2>Screening for Libel</h2>
     </header>
+    {% endif %}
 
     {% block content %}{% endblock %}
 
