--- a/can_i_publish/libel/static/scss/_base.scss
+++ b/can_i_publish/libel/static/scss/_base.scss
@@ -2,6 +2,7 @@
 $wht: #ffffff;
 $blk: #000000;
 $blu: #25b3fb;
+$a_blu: rgba(37, 179, 251, 0.3);
 $gry: #7A898D;
 $a_gry: rgba(0, 0, 0, 0.3);
 $b_gry: rgba(0, 0, 0, 0.1);
