--- a/can_i_publish/libel/static/scss/style.scss
+++ b/can_i_publish/libel/static/scss/style.scss
@@ -24,7 +24,25 @@ h3 {
 }
 
 header {
+    background-color: $blu;
+    box-sizing: border-box;
+    margin: 0 auto $slug auto;
+    padding: 12px;
     text-align: center;
+    width: $card_width;
+
+    h1,
+    h2,
+    h3 {
+        color: $wht;
+        font-weight: $med;
+        line-height: $dbl_slug;
+    }
+
+    h2,
+    h3 {
+        font-weight: $lgt;
+    }
 }
 
 
@@ -33,7 +51,6 @@ header {
 // ~~~~~~~~
 .card {
     background-color: $wht;
-    // box-shadow: 3px 3px 4px $a_gry;
     border: 2px solid $blu;
     box-sizing: border-box;
     height: $card_height;
@@ -46,9 +63,9 @@ header {
 
     .question_txt {
         color: $blu;
-        font-size: 18px;
+        font-size: 20px;
         font-weight: $med;
-        line-height: 26px;
+        line-height: 28px;
 
         a {
             border-bottom: 2px dashed $blu;
@@ -90,7 +107,25 @@ button {
     }
 }
 
-.start_over_button,
+.start_over_button {
+    button {
+        background-color: $wht;
+        border: 1px dotted $blu;
+        border-radius: 8px;
+        color: $a_blu;
+        display: block;
+        margin: $slug 0;
+        min-height: 40px;
+        transition: 1s;
+        width: $full;
+
+        &:hover {
+            background-color: $blu;
+            color: $wht;
+        }
+    }
+}
+
 .metrics_button {
     button {
         background-color: $blu;
@@ -108,7 +143,6 @@ button {
     button {
         background-color: $b_gry;
         border: 0;
-        // border-top: 1px dotted $blu;
         bottom: 0;
         color: $a_gry;
         cursor: default;
@@ -153,9 +187,6 @@ button {
         }
 
     }
-
-
-
 }
 
 
