final styles and min build in place

--- a/can_i_publish/libel/static/scss/_base.scss
+++ b/can_i_publish/libel/static/scss/_base.scss
@@ -17,8 +17,10 @@ $bld: 600;
 
 // dimensions
 $slug: 24px;
+$hlf_slug: 12px;
 $dbl_slug: 48px;
 $full: 100%;
+$half: 50%;
 
 // dimensions desktop
 $container: 600px;
