--- a/can_i_publish/libel/static/scss/style.scss
+++ b/can_i_publish/libel/static/scss/style.scss
@@ -27,7 +27,7 @@ header {
     background-color: $blu;
     box-sizing: border-box;
     margin: 0 auto $slug auto;
-    padding: 12px;
+    padding: $hlf_slug;
     text-align: center;
     width: $card_width;
 
@@ -187,6 +187,57 @@ button {
         }
 
     }
+}
+
+.summary {
+    border: 2px solid $blu;
+    width: $full;
+
+    .summary_header {
+        background-color: $blu;
+        box-sizing: border-box;
+        padding: $hlf_slug;
+        text-align: center;
+        width: $full;
+
+        h3 {
+            color: $wht;
+        }
+    }
+
+    .summary_grid {
+        box-sizing: border-box;
+        margin: $slug 0;
+        padding: $slug;
+    }
+
+    .metrics_button,
+    .start_over_button {
+        width: $half;
+    }
+
+    table {
+        border-collapse: collapse;
+
+        th {
+            border-bottom: 2px solid $blu;
+            text-align: left;
+        }
+
+        td {
+            border-bottom: 1px dashed $blu;
+            font-size: 14px;
+            line-height: 22px;
+            vertical-align: top;
+            padding-right: $slug;
+
+            &:last-of-type {
+                padding-right: 0;
+            }
+        }
+
+    }
+
 }
 
 
