--- a/can_i_publish/libel/static/style.css
+++ b/can_i_publish/libel/static/style.css
@@ -156,6 +156,47 @@ button {
   text-transform: uppercase;
 }
 
+.summary {
+  border: 2px solid #25b3fb;
+  width: 100%;
+}
+.summary .summary_header {
+  background-color: #25b3fb;
+  box-sizing: border-box;
+  padding: 12px;
+  text-align: center;
+  width: 100%;
+}
+.summary .summary_header h3 {
+  color: #ffffff;
+}
+.summary .summary_grid {
+  box-sizing: border-box;
+  margin: 24px 0;
+  padding: 24px;
+}
+.summary .metrics_button,
+.summary .start_over_button {
+  width: 50%;
+}
+.summary table {
+  border-collapse: collapse;
+}
+.summary table th {
+  border-bottom: 2px solid #25b3fb;
+  text-align: left;
+}
+.summary table td {
+  border-bottom: 1px dashed #25b3fb;
+  font-size: 14px;
+  line-height: 22px;
+  vertical-align: top;
+  padding-right: 24px;
+}
+.summary table td:last-of-type {
+  padding-right: 0;
+}
+
 .is_hidden {
   visibility: hidden;
 }
