--- a/can_i_publish/libel/templates/libel/card.html
+++ b/can_i_publish/libel/templates/libel/card.html
@@ -8,14 +8,14 @@
       {% if card.can_publish_status == 'yes' %}
       <div class="status_content">
         <span class="status_icon">&check;</span>
-        <span class="status_msg">can publish</span>
+        <span class="status_msg">good to publish</span>
       </div>
       {% endif %}
 
       {% if card.can_publish_status == 'no' %}
       <div class="status_content">
         <span class="status_icon">&#10005;</span>
-        <span class="status_msg">pause</span>
+        <span class="status_msg">take a pause</span>
       </div>
       {% endif %}
     </div>
