--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -13,8 +13,7 @@
 
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'normalize.min.css' %}?v=8.0.1">
-  <!-- TODO: use min file once the styles are complete -->
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220427i">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.min.css' %}?v=20220427j">
 
 
 </head>
@@ -33,7 +32,7 @@
 
   </div><!-- /container -->
 
-  <script src="{% static 'main.min.js' %}?v=20220422cc"></script>
+  <script src="{% static 'main.min.js' %}?v=20220427aa"></script>
 
 </body>
 </html>
