--- a/can_i_publish/libel/templates/libel/summary.html
+++ b/can_i_publish/libel/templates/libel/summary.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <div class="summary">
-  <h3>Summary</h3>
+  <div class="summary_header">
+    <h3>Summary</h3>
+  </div>
 
   <div class="summary_grid">
     <table>
@@ -15,29 +17,28 @@
         {% for item in summary %}
         <tr>
           <td>{% autoescape off %}{{ item.question }}{% endautoescape %} </td>
-          <td>{{ item.answer.1 }}</td>
+          <td><p>{{ item.answer.1 }}</p></td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
-  </div>
 
-  <div class="metrics_button">
-    <button
-      class="choice"
-      data-choice="metrics">
-      metrics
-    </button>
-  </div>
+    <div class="metrics_button">
+      <button
+        class="choice"
+        data-choice="metrics">
+        metrics
+      </button>
+    </div>
 
-  <div class="start_over_button">
-    <button
-      class="choice"
-      data-choice="Q1">
-      start over
-    </button>
+    <div class="start_over_button">
+      <button
+        class="choice"
+        data-choice="Q1">
+        start over
+      </button>
+    </div>
   </div>
-
 </div><!-- /summary -->
 
 {% endblock %}
